--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,6 @@
   --negro: #343a40;
 }
 
-::-webkit-scrollbar {
-  display: none;
-}
-
-
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
